[gd_scene load_steps=14 format=2]

[ext_resource path="res://Levels/MainRoom.gd" type="Script" id=1]
[ext_resource path="res://Tiles/TileFloor.tres" type="TileSet" id=2]
[ext_resource path="res://Tiles/TileTunnel.tres" type="TileSet" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tiles/TileWallNEW.tres" type="TileSet" id=5]
[ext_resource path="res://Assets/Lights/Light.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tiles/side-door-front.png" type="Texture" id=7]
[ext_resource path="res://Tiles/side-door-back.png" type="Texture" id=8]
[ext_resource path="res://Tiles/middle_rock1.png" type="Texture" id=9]
[ext_resource path="res://Tiles/crabdoor.png" type="Texture" id=10]
[ext_resource path="res://Sounds/OST/Widower (Main Room Theme).wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/OST/water_ambience.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/SFX/note_pickup.wav" type="AudioStream" id=18]

[node name="MainRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="TileFloor" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 13, 0, 16, 13, 0, 17, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 9, 0, 131087, 10, 0, 131088, 13, 0, 131089, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 1, 0, 196623, 2, 0, 196624, 13, 0, 196625, 13, 0, 262156, 13, 0, 262157, 13, 0, 262158, 1, 0, 262159, 2, 0, 262160, 13, 0, 262161, 13, 0, 327692, 13, 0, 327693, 13, 0, 327694, 1, 0, 327695, 2, 0, 327696, 13, 0, 327697, 13, 0, 393228, 13, 0, 393229, 13, 0, 393230, 1, 0, 393231, 2, 0, 393232, 13, 0, 393233, 13, 0, 458764, 13, 0, 458765, 13, 0, 458766, 1, 0, 458767, 2, 0, 458768, 13, 0, 458769, 13, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 524302, 1, 0, 524303, 2, 0, 524304, 13, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 524308, 13, 0, 524309, 13, 0, 589832, 13, 0, 589833, 13, 0, 589834, 13, 0, 589835, 13, 0, 589836, 13, 0, 589837, 13, 0, 589838, 1, 0, 589839, 2, 0, 589840, 13, 0, 589841, 13, 0, 589842, 13, 0, 589843, 13, 0, 589844, 13, 0, 589845, 13, 0, 655368, 13, 0, 655369, 13, 0, 655370, 9, 0, 655371, 12, 0, 655372, 12, 0, 655373, 12, 0, 655374, 6, 0, 655375, 5, 0, 655376, 12, 0, 655377, 12, 0, 655378, 12, 0, 655379, 10, 0, 655380, 13, 0, 655381, 13, 0, 720904, 13, 0, 720905, 13, 0, 720906, 1, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 2, 0, 720916, 13, 0, 720917, 13, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 13, 0, 786442, 1, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 2, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 786461, 13, 0, 851968, 13, 0, 851969, 13, 0, 851970, 13, 0, 851971, 13, 0, 851972, 13, 0, 851973, 13, 0, 851974, 13, 0, 851975, 13, 0, 851976, 13, 0, 851977, 13, 0, 851978, 1, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 2, 0, 851988, 13, 0, 851989, 13, 0, 851990, 13, 0, 851991, 13, 0, 851992, 13, 0, 851993, 13, 0, 851994, 13, 0, 851995, 13, 0, 851996, 13, 0, 851997, 13, 0, 917504, 13, 0, 917505, 13, 0, 917506, 9, 0, 917507, 12, 0, 917508, 12, 0, 917509, 12, 0, 917510, 12, 0, 917511, 12, 0, 917512, 12, 0, 917513, 12, 0, 917514, 6, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 5, 0, 917524, 12, 0, 917525, 12, 0, 917526, 12, 0, 917527, 12, 0, 917528, 12, 0, 917529, 12, 0, 917530, 12, 0, 917531, 10, 0, 917532, 13, 0, 917533, 13, 0, 983040, 13, 0, 983041, 13, 0, 983042, 1, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 2, 0, 983068, 13, 0, 983069, 13, 0, 1048576, 13, 0, 1048577, 13, 0, 1048578, 3, 0, 1048579, 11, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048583, 11, 0, 1048584, 11, 0, 1048585, 11, 0, 1048586, 7, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 8, 0, 1048596, 11, 0, 1048597, 11, 0, 1048598, 11, 0, 1048599, 11, 0, 1048600, 11, 0, 1048601, 11, 0, 1048602, 11, 0, 1048603, 4, 0, 1048604, 13, 0, 1048605, 13, 0, 1114112, 13, 0, 1114113, 13, 0, 1114114, 13, 0, 1114115, 13, 0, 1114116, 13, 0, 1114117, 13, 0, 1114118, 13, 0, 1114119, 13, 0, 1114120, 13, 0, 1114121, 13, 0, 1114122, 1, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 2, 0, 1114132, 13, 0, 1114133, 13, 0, 1114134, 13, 0, 1114135, 13, 0, 1114136, 13, 0, 1114137, 13, 0, 1114138, 13, 0, 1114139, 13, 0, 1114140, 13, 0, 1114141, 13, 0, 1179656, 13, 0, 1179657, 13, 0, 1179658, 1, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 2, 0, 1179668, 13, 0, 1179669, 13, 0, 1245192, 13, 0, 1245193, 13, 0, 1245194, 1, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 2, 0, 1245204, 13, 0, 1245205, 13, 0, 1310728, 13, 0, 1310729, 13, 0, 1310730, 3, 0, 1310731, 11, 0, 1310732, 11, 0, 1310733, 11, 0, 1310734, 7, 0, 1310735, 8, 0, 1310736, 11, 0, 1310737, 11, 0, 1310738, 11, 0, 1310739, 4, 0, 1310740, 13, 0, 1310741, 13, 0, 1376264, 13, 0, 1376265, 13, 0, 1376266, 13, 0, 1376267, 13, 0, 1376268, 13, 0, 1376269, 13, 0, 1376270, 1, 0, 1376271, 2, 0, 1376272, 13, 0, 1376273, 13, 0, 1376274, 13, 0, 1376275, 13, 0, 1376276, 13, 0, 1376277, 13, 0, 1441804, 13, 0, 1441805, 13, 0, 1441806, 1, 0, 1441807, 2, 0, 1441808, 13, 0, 1441809, 13, 0, 1507340, 13, 0, 1507341, 13, 0, 1507342, 1, 0, 1507343, 2, 0, 1507344, 13, 0, 1507345, 13, 0, 1572876, 13, 0, 1572877, 13, 0, 1572878, 1, 0, 1572879, 2, 0, 1572880, 13, 0, 1572881, 13, 0, 1638412, 13, 0, 1638413, 13, 0, 1638414, 1, 0, 1638415, 2, 0, 1638416, 13, 0, 1638417, 13, 0, 1703948, 13, 0, 1703949, 13, 0, 1703950, 1, 0, 1703951, 2, 0, 1703952, 13, 0, 1703953, 13, 0, 1769484, 13, 0, 1769485, 13, 0, 1769486, 1, 0, 1769487, 2, 0, 1769488, 13, 0, 1769489, 13, 0, 1835020, 13, 0, 1835021, 13, 0, 1835022, 13, 0, 1835023, 13, 0, 1835024, 13, 0, 1835025, 13, 0, 1900556, 13, 0, 1900557, 13, 0, 1900558, 13, 0, 1900559, 13, 0, 1900560, 13, 0, 1900561, 13, 0 )

[node name="TileTunnel" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( 1703950, 1, 0, 1703951, 1, 0, 1769485, 3, 0, 1769486, 4, 0, 1769487, 4, 0, 1769488, 5, 0 )

[node name="SFXAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -10.0
autoplay = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -5.0
autoplay = true

[node name="SFXNote" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -10.0

[node name="middle_rock1" type="Sprite" parent="."]
position = Vector2( 4800, 4960 )
texture = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 4640, 8480 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 8, 8 )

[node name="Decorations" type="Node2D" parent="."]

[node name="TileWall" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( 0, 36, 0, 1, 36, 0, 2, 36, 0, 3, 36, 0, 4, 36, 0, 5, 36, 0, 6, 36, 0, 7, 36, 0, 8, 36, 0, 9, 36, 0, 10, 36, 0, 11, 36, 0, 12, 36, 0, 13, 24, 0, 14, 37, 0, 15, 38, 0, 16, 26, 0, 17, 36, 0, 18, 36, 0, 19, 36, 0, 20, 36, 0, 21, 36, 0, 22, 36, 0, 23, 36, 0, 24, 36, 0, 25, 36, 0, 26, 36, 0, 27, 36, 0, 28, 36, 0, 29, 36, 0, 65536, 36, 0, 65537, 36, 0, 65538, 36, 0, 65539, 36, 0, 65540, 36, 0, 65541, 36, 0, 65542, 36, 0, 65543, 36, 0, 65544, 36, 0, 65545, 36, 0, 65546, 36, 0, 65547, 36, 0, 65548, 36, 0, 65549, 24, 0, 65550, 39, 0, 65551, 40, 0, 65552, 26, 0, 65553, 36, 0, 65554, 36, 0, 65555, 36, 0, 65556, 36, 0, 65557, 36, 0, 65558, 36, 0, 65559, 36, 0, 65560, 36, 0, 65561, 36, 0, 65562, 36, 0, 65563, 36, 0, 65564, 36, 0, 65565, 36, 0, 131072, 36, 0, 131073, 36, 0, 131074, 36, 0, 131075, 36, 0, 131076, 36, 0, 131077, 36, 0, 131078, 36, 0, 131079, 36, 0, 131080, 36, 0, 131081, 36, 0, 131082, 36, 0, 131083, 36, 0, 131084, 36, 0, 131085, 21, 0, 131088, 23, 0, 131089, 36, 0, 131090, 36, 0, 131091, 36, 0, 131092, 36, 0, 131093, 36, 0, 131094, 36, 0, 131095, 36, 0, 131096, 36, 0, 131097, 36, 0, 131098, 36, 0, 131099, 36, 0, 131100, 36, 0, 131101, 36, 0, 196608, 36, 0, 196609, 36, 0, 196610, 36, 0, 196611, 36, 0, 196612, 36, 0, 196613, 36, 0, 196614, 36, 0, 196615, 36, 0, 196616, 36, 0, 196617, 36, 0, 196618, 36, 0, 196619, 36, 0, 196620, 36, 0, 196621, 21, 0, 196624, 23, 0, 196625, 36, 0, 196626, 36, 0, 196627, 36, 0, 196628, 36, 0, 196629, 36, 0, 196630, 36, 0, 196631, 36, 0, 196632, 36, 0, 196633, 36, 0, 196634, 36, 0, 196635, 36, 0, 196636, 36, 0, 196637, 36, 0, 262144, 36, 0, 262145, 36, 0, 262146, 36, 0, 262147, 36, 0, 262148, 36, 0, 262149, 36, 0, 262150, 36, 0, 262151, 36, 0, 262152, 36, 0, 262153, 36, 0, 262154, 36, 0, 262155, 36, 0, 262156, 36, 0, 262157, 21, 0, 262160, 23, 0, 262161, 36, 0, 262162, 36, 0, 262163, 36, 0, 262164, 36, 0, 262165, 36, 0, 262166, 36, 0, 262167, 36, 0, 262168, 36, 0, 262169, 36, 0, 262170, 36, 0, 262171, 36, 0, 262172, 36, 0, 262173, 36, 0, 327680, 36, 0, 327681, 36, 0, 327682, 36, 0, 327683, 36, 0, 327684, 36, 0, 327685, 36, 0, 327686, 36, 0, 327687, 36, 0, 327688, 36, 0, 327689, 36, 0, 327690, 36, 0, 327691, 36, 0, 327692, 36, 0, 327693, 21, 0, 327696, 23, 0, 327697, 36, 0, 327698, 36, 0, 327699, 36, 0, 327700, 36, 0, 327701, 36, 0, 327702, 36, 0, 327703, 36, 0, 327704, 36, 0, 327705, 36, 0, 327706, 36, 0, 327707, 36, 0, 327708, 36, 0, 327709, 36, 0, 393216, 36, 0, 393217, 36, 0, 393218, 36, 0, 393219, 36, 0, 393220, 36, 0, 393221, 36, 0, 393222, 36, 0, 393223, 36, 0, 393224, 36, 0, 393225, 36, 0, 393226, 36, 0, 393227, 36, 0, 393228, 36, 0, 393229, 21, 0, 393232, 23, 0, 393233, 36, 0, 393234, 36, 0, 393235, 36, 0, 393236, 36, 0, 393237, 36, 0, 393238, 36, 0, 393239, 36, 0, 393240, 36, 0, 393241, 36, 0, 393242, 36, 0, 393243, 36, 0, 393244, 36, 0, 393245, 36, 0, 458752, 36, 0, 458753, 36, 0, 458754, 36, 0, 458755, 36, 0, 458756, 36, 0, 458757, 36, 0, 458758, 36, 0, 458759, 36, 0, 458760, 36, 0, 458761, 36, 0, 458762, 36, 0, 458763, 36, 0, 458764, 36, 0, 458765, 21, 0, 458768, 23, 0, 458769, 36, 0, 458770, 36, 0, 458771, 36, 0, 458772, 36, 0, 458773, 36, 0, 458774, 36, 0, 458775, 36, 0, 458776, 36, 0, 458777, 36, 0, 458778, 36, 0, 458779, 36, 0, 458780, 36, 0, 458781, 36, 0, 524288, 36, 0, 524289, 36, 0, 524290, 36, 0, 524291, 36, 0, 524292, 36, 0, 524293, 36, 0, 524294, 36, 0, 524295, 36, 0, 524296, 36, 0, 524297, 18, 0, 524298, 7, 0, 524299, 7, 0, 524300, 7, 0, 524301, 14, 0, 524304, 12, 0, 524305, 7, 0, 524306, 7, 0, 524307, 7, 0, 524308, 20, 0, 524309, 36, 0, 524310, 36, 0, 524311, 36, 0, 524312, 36, 0, 524313, 36, 0, 524314, 36, 0, 524315, 36, 0, 524316, 36, 0, 524317, 36, 0, 589824, 36, 0, 589825, 36, 0, 589826, 36, 0, 589827, 36, 0, 589828, 36, 0, 589829, 36, 0, 589830, 36, 0, 589831, 36, 0, 589832, 36, 0, 589833, 21, 0, 589834, 16, 0, 589835, 16, 0, 589836, 16, 0, 589837, 17, 0, 589840, 15, 0, 589841, 16, 0, 589842, 16, 0, 589843, 16, 0, 589844, 26, 0, 589845, 36, 0, 589846, 36, 0, 589847, 36, 0, 589848, 36, 0, 589849, 36, 0, 589850, 36, 0, 589851, 36, 0, 589852, 36, 0, 589853, 36, 0, 655360, 36, 0, 655361, 36, 0, 655362, 36, 0, 655363, 36, 0, 655364, 36, 0, 655365, 36, 0, 655366, 36, 0, 655367, 36, 0, 655368, 36, 0, 655369, 21, 0, 655380, 26, 0, 655381, 36, 0, 655382, 36, 0, 655383, 36, 0, 655384, 36, 0, 655385, 36, 0, 655386, 36, 0, 655387, 36, 0, 655388, 36, 0, 655389, 36, 0, 720896, 36, 0, 720897, 36, 0, 720898, 36, 0, 720899, 36, 0, 720900, 36, 0, 720901, 36, 0, 720902, 36, 0, 720903, 36, 0, 720904, 36, 0, 720905, 21, 0, 720916, 26, 0, 720917, 36, 0, 720918, 36, 0, 720919, 36, 0, 720920, 36, 0, 720921, 36, 0, 720922, 36, 0, 720923, 36, 0, 720924, 36, 0, 720925, 36, 0, 786432, 36, 0, 786433, 18, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 14, 0, 786452, 12, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 20, 0, 786461, 36, 0, 851968, 36, 0, 851969, 24, 0, 851970, 16, 0, 851971, 16, 0, 851972, 16, 0, 851973, 16, 0, 851974, 16, 0, 851975, 16, 0, 851976, 16, 0, 851977, 17, 0, 851988, 15, 0, 851989, 16, 0, 851990, 16, 0, 851991, 16, 0, 851992, 16, 0, 851993, 16, 0, 851994, 16, 0, 851995, 16, 0, 851996, 23, 0, 851997, 36, 0, 917504, 36, 0, 917505, 24, 0, 917532, 23, 0, 917533, 36, 0, 983040, 36, 0, 983041, 24, 0, 983068, 23, 0, 983069, 36, 0, 1048576, 36, 0, 1048577, 30, 0, 1048578, 31, 0, 1048579, 31, 0, 1048580, 31, 0, 1048581, 31, 0, 1048582, 31, 0, 1048583, 31, 0, 1048584, 31, 0, 1048585, 27, 0, 1048596, 29, 0, 1048597, 31, 0, 1048598, 31, 0, 1048599, 31, 0, 1048600, 31, 0, 1048601, 31, 0, 1048602, 31, 0, 1048603, 31, 0, 1048604, 32, 0, 1048605, 36, 0, 1114112, 36, 0, 1114113, 36, 0, 1114114, 36, 0, 1114115, 36, 0, 1114116, 36, 0, 1114117, 36, 0, 1114118, 36, 0, 1114119, 36, 0, 1114120, 36, 0, 1114121, 24, 0, 1114132, 26, 0, 1114133, 36, 0, 1114134, 36, 0, 1114135, 36, 0, 1114136, 36, 0, 1114137, 36, 0, 1114138, 36, 0, 1114139, 36, 0, 1114140, 36, 0, 1114141, 36, 0, 1179648, 36, 0, 1179649, 36, 0, 1179650, 36, 0, 1179651, 36, 0, 1179652, 36, 0, 1179653, 36, 0, 1179654, 36, 0, 1179655, 36, 0, 1179656, 36, 0, 1179657, 24, 0, 1179668, 26, 0, 1179669, 36, 0, 1179670, 36, 0, 1179671, 36, 0, 1179672, 36, 0, 1179673, 36, 0, 1179674, 36, 0, 1179675, 36, 0, 1179676, 36, 0, 1179677, 36, 0, 1245184, 36, 0, 1245185, 36, 0, 1245186, 36, 0, 1245187, 36, 0, 1245188, 36, 0, 1245189, 36, 0, 1245190, 36, 0, 1245191, 36, 0, 1245192, 36, 0, 1245193, 24, 0, 1245204, 26, 0, 1245205, 36, 0, 1245206, 36, 0, 1245207, 36, 0, 1245208, 36, 0, 1245209, 36, 0, 1245210, 36, 0, 1245211, 36, 0, 1245212, 36, 0, 1245213, 36, 0, 1310720, 36, 0, 1310721, 36, 0, 1310722, 36, 0, 1310723, 36, 0, 1310724, 36, 0, 1310725, 36, 0, 1310726, 36, 0, 1310727, 36, 0, 1310728, 36, 0, 1310729, 30, 0, 1310730, 31, 0, 1310731, 31, 0, 1310732, 31, 0, 1310733, 27, 0, 1310736, 29, 0, 1310737, 31, 0, 1310738, 31, 0, 1310739, 31, 0, 1310740, 32, 0, 1310741, 36, 0, 1310742, 36, 0, 1310743, 36, 0, 1310744, 36, 0, 1310745, 36, 0, 1310746, 36, 0, 1310747, 36, 0, 1310748, 36, 0, 1310749, 36, 0, 1376256, 36, 0, 1376257, 36, 0, 1376258, 36, 0, 1376259, 36, 0, 1376260, 36, 0, 1376261, 36, 0, 1376262, 36, 0, 1376263, 36, 0, 1376264, 36, 0, 1376265, 36, 0, 1376266, 36, 0, 1376267, 36, 0, 1376268, 36, 0, 1376269, 24, 0, 1376272, 26, 0, 1376273, 36, 0, 1376274, 36, 0, 1376275, 36, 0, 1376276, 36, 0, 1376277, 36, 0, 1376278, 36, 0, 1376279, 36, 0, 1376280, 36, 0, 1376281, 36, 0, 1376282, 36, 0, 1376283, 36, 0, 1376284, 36, 0, 1376285, 36, 0, 1441792, 36, 0, 1441793, 36, 0, 1441794, 36, 0, 1441795, 36, 0, 1441796, 36, 0, 1441797, 36, 0, 1441798, 36, 0, 1441799, 36, 0, 1441800, 36, 0, 1441801, 36, 0, 1441802, 36, 0, 1441803, 36, 0, 1441804, 36, 0, 1441805, 21, 0, 1441808, 23, 0, 1441809, 36, 0, 1441810, 36, 0, 1441811, 36, 0, 1441812, 36, 0, 1441813, 36, 0, 1441814, 36, 0, 1441815, 36, 0, 1441816, 36, 0, 1441817, 36, 0, 1441818, 36, 0, 1441819, 36, 0, 1441820, 36, 0, 1441821, 36, 0, 1507328, 36, 0, 1507329, 36, 0, 1507330, 36, 0, 1507331, 36, 0, 1507332, 36, 0, 1507333, 36, 0, 1507334, 36, 0, 1507335, 36, 0, 1507336, 36, 0, 1507337, 36, 0, 1507338, 36, 0, 1507339, 36, 0, 1507340, 36, 0, 1507341, 21, 0, 1507344, 23, 0, 1507345, 36, 0, 1507346, 36, 0, 1507347, 36, 0, 1507348, 36, 0, 1507349, 36, 0, 1507350, 36, 0, 1507351, 36, 0, 1507352, 36, 0, 1507353, 36, 0, 1507354, 36, 0, 1507355, 36, 0, 1507356, 36, 0, 1507357, 36, 0, 1572864, 36, 0, 1572865, 36, 0, 1572866, 36, 0, 1572867, 36, 0, 1572868, 36, 0, 1572869, 36, 0, 1572870, 36, 0, 1572871, 36, 0, 1572872, 36, 0, 1572873, 36, 0, 1572874, 36, 0, 1572875, 36, 0, 1572876, 36, 0, 1572877, 24, 0, 1572880, 26, 0, 1572881, 36, 0, 1572882, 36, 0, 1572883, 36, 0, 1572884, 36, 0, 1572885, 36, 0, 1572886, 36, 0, 1572887, 36, 0, 1572888, 36, 0, 1572889, 36, 0, 1572890, 36, 0, 1572891, 36, 0, 1572892, 36, 0, 1572893, 36, 0, 1638400, 36, 0, 1638401, 36, 0, 1638402, 36, 0, 1638403, 36, 0, 1638404, 36, 0, 1638405, 36, 0, 1638406, 36, 0, 1638407, 36, 0, 1638408, 36, 0, 1638409, 36, 0, 1638410, 36, 0, 1638411, 36, 0, 1638412, 36, 0, 1638413, 21, 0, 1638416, 26, 0, 1638417, 36, 0, 1638418, 36, 0, 1638419, 36, 0, 1638420, 36, 0, 1638421, 36, 0, 1638422, 36, 0, 1638423, 36, 0, 1638424, 36, 0, 1638425, 36, 0, 1638426, 36, 0, 1638427, 36, 0, 1638428, 36, 0, 1638429, 36, 0, 1703936, 36, 0, 1703937, 36, 0, 1703938, 36, 0, 1703939, 36, 0, 1703940, 36, 0, 1703941, 36, 0, 1703942, 36, 0, 1703943, 36, 0, 1703944, 36, 0, 1703945, 36, 0, 1703946, 36, 0, 1703947, 36, 0, 1703948, 36, 0, 1703949, 30, 0, 1703952, 32, 0, 1703953, 36, 0, 1703954, 36, 0, 1703955, 36, 0, 1703956, 36, 0, 1703957, 36, 0, 1703958, 36, 0, 1703959, 36, 0, 1703960, 36, 0, 1703961, 36, 0, 1703962, 36, 0, 1703963, 36, 0, 1703964, 36, 0, 1703965, 36, 0, 1769472, 36, 0, 1769473, 36, 0, 1769474, 36, 0, 1769475, 36, 0, 1769476, 36, 0, 1769477, 36, 0, 1769478, 36, 0, 1769479, 36, 0, 1769480, 36, 0, 1769481, 36, 0, 1769482, 36, 0, 1769483, 36, 0, 1769484, 36, 0, 1769489, 36, 0, 1769490, 36, 0, 1769491, 36, 0, 1769492, 36, 0, 1769493, 36, 0, 1769494, 36, 0, 1769495, 36, 0, 1769496, 36, 0, 1769497, 36, 0, 1769498, 36, 0, 1769499, 36, 0, 1769500, 36, 0, 1769501, 36, 0, 1835008, 36, 0, 1835009, 36, 0, 1835010, 36, 0, 1835011, 36, 0, 1835012, 36, 0, 1835013, 36, 0, 1835014, 36, 0, 1835015, 36, 0, 1835016, 36, 0, 1835017, 36, 0, 1835018, 36, 0, 1835019, 36, 0, 1835020, 36, 0, 1835021, 36, 0, 1835022, 36, 0, 1835023, 36, 0, 1835024, 36, 0, 1835025, 36, 0, 1835026, 36, 0, 1835027, 36, 0, 1835028, 36, 0, 1835029, 36, 0, 1835030, 36, 0, 1835031, 36, 0, 1835032, 36, 0, 1835033, 36, 0, 1835034, 36, 0, 1835035, 36, 0, 1835036, 36, 0, 1835037, 36, 0, 1900544, 36, 0, 1900545, 36, 0, 1900546, 36, 0, 1900547, 36, 0, 1900548, 36, 0, 1900549, 36, 0, 1900550, 36, 0, 1900551, 36, 0, 1900552, 36, 0, 1900553, 36, 0, 1900554, 36, 0, 1900555, 36, 0, 1900556, 36, 0, 1900557, 36, 0, 1900558, 36, 0, 1900559, 36, 0, 1900560, 36, 0, 1900561, 36, 0, 1900562, 36, 0, 1900563, 36, 0, 1900564, 36, 0, 1900565, 36, 0, 1900566, 36, 0, 1900567, 36, 0, 1900568, 36, 0, 1900569, 36, 0, 1900570, 36, 0, 1900571, 36, 0, 1900572, 36, 0, 1900573, 36, 0 )

[node name="Lights" type="Node2D" parent="."]

[node name="Light" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 5120, 8320 )

[node name="Light2" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 5120, 7520 )

[node name="Light3" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 5120, 6720 )

[node name="Light4" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 4480, 8320 )
scale = Vector2( -1, 1 )

[node name="Light5" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 4480, 7520 )
scale = Vector2( -1, 1 )

[node name="Light6" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 4480, 6720 )
scale = Vector2( -1, 1 )

[node name="Light7" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 6400, 6400 )

[node name="Light8" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 6400, 5440 )

[node name="Light9" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 3200, 6400 )
scale = Vector2( -1, 1 )

[node name="Light10" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 3200, 5440 )
scale = Vector2( -1, 1 )

[node name="Light11" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 3200, 3840 )
scale = Vector2( -1, 1 )

[node name="Light12" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 3200, 2720 )
scale = Vector2( -1, 1 )

[node name="Light13" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 6400, 2720 )

[node name="Light14" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 6400, 3840 )

[node name="Light15" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 5120, 2560 )

[node name="Light16" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 5120, 1440 )

[node name="Light17" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 5120, 480 )

[node name="Light18" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 4480, 480 )
scale = Vector2( -1, 1 )

[node name="Light19" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 4480, 1440 )
scale = Vector2( -1, 1 )

[node name="Light20" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 4480, 2560 )
scale = Vector2( -1, 1 )

[node name="Light21" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1280, 4000 )
scale = Vector2( -1, 1 )

[node name="Light22" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 2240, 4000 )
scale = Vector2( -1, 1 )

[node name="Light23" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 2240, 5120 )
scale = Vector2( -1, 1 )

[node name="Light24" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 1280, 5120 )
scale = Vector2( -1, 1 )

[node name="Light25" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 7360, 5120 )

[node name="Light26" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 8320, 5120 )

[node name="Light27" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 8320, 4000 )

[node name="Light28" parent="Lights" instance=ExtResource( 6 )]
position = Vector2( 7360, 4000 )

[node name="BoxTunnel" type="Node2D" parent="."]
position = Vector2( 9920, -31.3687 )
rotation = 3.14159
scale = Vector2( 1, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="side-door-back" type="Sprite" parent="BoxTunnel"]
position = Vector2( 1121.71, 4671.89 )
texture = ExtResource( 8 )

[node name="side-door-front" type="Sprite" parent="BoxTunnel"]
position = Vector2( 1121.81, 4671.6 )
texture = ExtResource( 7 )

[node name="DoorTunnel" type="Node2D" parent="."]
position = Vector2( -305.011, -31.3687 )
__meta__ = {
"_edit_group_": true
}

[node name="side-door-back" type="Sprite" parent="DoorTunnel"]
position = Vector2( 1121.71, 4671.89 )
texture = ExtResource( 8 )

[node name="side-door-front" type="Sprite" parent="DoorTunnel"]
position = Vector2( 1121.81, 4671.6 )
texture = ExtResource( 7 )

[node name="crabdoor" type="Sprite" parent="."]
position = Vector2( 4800, 160 )
texture = ExtResource( 10 )
[connection signal="finished" from="SFXAmbience" to="." method="_on_SFXAmbience_finished"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
[connection signal="finished" from="SFXNote" to="." method="_on_SFXNote_finished"]
